WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164476
Fix the !ENABLE(VIDEO_TRACK) build
https://bugs.webkit.org/show_bug.cgi?id=164476
Summary
Fix the !ENABLE(VIDEO_TRACK) build
Csaba Osztrogonác
Reported
2016-11-07 05:11:24 PST
CSSSelector::PseudoElementCue is defined inside ENABLE(VIDEO_TRACK), but it is used unconditionally. It should be fixed.
Attachments
Patch
(5.14 KB, patch)
2016-11-07 05:25 PST
,
Csaba Osztrogonác
darin
: review+
Details
Formatted Diff
Diff
patch for landing
(5.69 KB, patch)
2016-11-14 05:55 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
patch for landing
(5.47 KB, patch)
2016-11-14 06:28 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-11-07 05:25:22 PST
Created
attachment 294055
[details]
Patch
Darin Adler
Comment 2
2016-11-07 23:14:00 PST
Comment on
attachment 294055
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294055&action=review
> Source/WebCore/css/parser/CSSParserValues.h:275 > - bool needsImplicitShadowCombinatorForMatching() const { return match() == CSSSelector::PseudoElement && (pseudoElementType() == CSSSelector::PseudoElementWebKitCustom || pseudoElementType() == CSSSelector::PseudoElementUserAgentCustom || pseudoElementType() == CSSSelector::PseudoElementWebKitCustomLegacyPrefixed || pseudoElementType() == CSSSelector::PseudoElementCue); } > + bool needsImplicitShadowCombinatorForMatching() const > + { > + return match() == CSSSelector::PseudoElement > + && (pseudoElementType() == CSSSelector::PseudoElementWebKitCustom > + || pseudoElementType() == CSSSelector::PseudoElementUserAgentCustom > +#if ENABLE(VIDEO_TRACK) > + || pseudoElementType() == CSSSelector::PseudoElementCue > +#endif > + || pseudoElementType() == CSSSelector::PseudoElementWebKitCustomLegacyPrefixed); > + }
When member function bodies get big like this, I like to move them out of class definitions into separate function definitions, like CSSParserValue::setFromValueList below.
Csaba Osztrogonác
Comment 3
2016-11-14 05:55:37 PST
Created
attachment 294698
[details]
patch for landing
Csaba Osztrogonác
Comment 4
2016-11-14 06:28:21 PST
Created
attachment 294700
[details]
patch for landing
WebKit Commit Bot
Comment 5
2016-11-14 07:42:36 PST
Comment on
attachment 294700
[details]
patch for landing Clearing flags on attachment: 294700 Committed
r208681
: <
http://trac.webkit.org/changeset/208681
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug