Fix the !ENABLE(VIDEO_TRACK) build https://bugs.webkit.org/show_bug.cgi?id=164476

Reviewed by Darin Adler.

* css/RuleSet.cpp:
(WebCore::RuleSet::addRule):
* css/parser/CSSParserValues.h:
(WebCore::CSSParserSelector::needsImplicitShadowCombinatorForMatching):
* css/parser/CSSSelectorParser.cpp:
(WebCore::isPseudoElementFunction):
(WebCore::CSSSelectorParser::consumePseudo):


Canonical link: https://commits.webkit.org/182399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208681 268f45cc-cd09-0410-ab3c-d52691b4dbfc